notify user to setup meeting
